--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment2</title>
-   <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
 
 </head>
@@ -17,35 +17,106 @@
                 <div class=fitness-area> Fitness</div>
                 <div class="home">
                     <button
-                        style="background-color:rgb(230, 83, 60);border:none;border-radius:46px;padding: 5px; color:white ;">Home</button>
+      style="background-color:rgb(230, 83, 60);border:none;border-radius:46px;padding:
+       5px; color:white ;">Home</button>
                     <d class="nav-menu-btn">Service</d>
                     <d class="nav-menu-btn">Contact</d>
                     <d class="nav-menu-btn">About</d>
                 </div>
             </nav>
             <div class="banner-main">
-            <div class="banner-childs">
-                <h1 style="color:white">Get body in<d class="shape"> shape</d> & stay healthy</h1>
-                <p>Staying in shape and healthy involves regular exercise,
-                    balanced nutrition, proper sleep, and stress management. It's about maintaining
-                    a consistent routine that supports physical fitness and overall well-being.</p>
-                <div>
-                    <button
-                        style="background-color: rgb(230, 83, 60);padding:16px 40px 16px 40px;border-radius: 42px;color: white;">join
-                        club now!</button>
-                    <button
-                        style="padding:16px 40px 16px 40px;border-radius: 42px;color: white;background-color: black">Download
-                        App</button>
+                <div class="banner-childs">
+                    <h1 style=" color:white">Get body in<br>
+                        <d class="shape"> shape</d> & stay <br>healthy
+                    </h1>
+                    <p class="description">Staying in shape and healthy involves regular exercise,
+                        balanced nutrition, proper sleep,<br> and stress management. It's about maintaining
+                        a consistent routine that supports<br> physical fitness and overall well-being.</p>
+             <div>
+             <button
+              style="background-color: rgb(230, 83, 60);padding:16px 40px 16px 40px;border-radius:
+               42px;color: white;">join
+                            club now!</button>
+     <button
+          style="padding:16px 40px 16px 40px;border-radius: 42px;color: white;background-color: black">Download
+        App</button>
+                    </div>
                 </div>
-            </div>
-            <div class="banner-childs">
-                <img src="images/Images 2.png" alt="">
+                <div class="div-350">
+                    <div>
+                     <h2>350+</h2>
+                     <d>Video tutorial</d>
+                    </div class=round>
+                    <div><i class="fa-solid fa-circle"></i></div>
+                    </div>
+
+                </div>
+                <div class="banner-childs">
+                    <img src="images/Images 2.png" alt="">
+                </div>
+                <section class="section-500">
+                    <h2>500+</h2>
+                    <p>Free workout videos</p>
+                </section>
             </div>
         </div>
-         </div>
+        <div>
+            <div class="Change-Your-Habits">
+                <h1 style="align-items: center;">Change Your Habits</h1>
+                <p class="description">Changing habits involves setting clear goals, breaking down steps,
+                     and staying consistent. Replace old habits with positive ones, reward progress, and be patient with setbacks.
+                     Over time, persistence leads to lasting change.</p>                   
+           
+            <div class="movement">
+                <div>
+                <img src="images/image 3.png" alt="">
+                <h1>Movement</h1>
+                <p class="description">Movement in exercise is essential for maintaining physical health, 
+                    improving <br>strength, flexibility, 
+                    and cardiovascular function.</p>
+                </div>
+                <!-- <div>
+                    <h1>Movement</h1>
+                    <p>Movement in exercise is essential for maintaining physical health, 
+                        improving strength, flexibility, 
+                        and cardiovascular function.</p>
+                </div> -->
+                <div>
+                    <img src="images/image 2.png" alt="">
+                    <h1>Time</h1>
+                    <p class="description">Time in exercise is vital for progress and health benefits, 
+                        ensuring consistency and steady improvement.</p>
+                </div>
+                <!-- <div>           
+                <h1>Time</h1>
+                <p>Time in exercise is vital for progress and health benefits, 
+                    ensuring consistency and steady improvement.</p>
+            </div> -->
+            <div>
+                <img src="images/image 4.png" alt="">
+                <h1>Practice</h1>
+            <p class="description">Practice in exercise is crucial for skill mastery, strength building, and long-term fitness success.</p>
+            </div>
+            <!-- <div>           
+            <h1>Practice</h1>
+            <p>Practice in exercise is crucial for skill mastery, strength building, and long-term fitness success.</p>
+                </div> -->
+                <div>
+                    <img src="images/image 5.png" alt="">
+                    <h1>Weight Loss</h1>
+                <p class="description">Exercise is the best and healthy way for one to loss his weight</p>
+                </div>
+           <!-- <div>           
+                <h1>Weight Loss</h1>
+                <p>Exercise is the best and healthy way for one to loss his weight</p>
+                    </div> -->
+            </div>
+        </div>
+    </div>
     </header>
 
 
+    <main>
 
     </main>
     <footer></footer>
