updated 6th time

--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
                           <option value="">swimming</option>
                           <option value="">push-up</option></select>                                               
                     </div>
-                    <!-- <div><button style="border-radius: 42px;color: white; margin-right: 40%; margin-left: 90%;margin-bottom: 5%;
-                                          background: rgb(230, 83, 60); padding: 10px;">Calculate </button></div> -->
+                     <div><button style="border-radius: 42px;color: white; margin-right: 40%; margin-left: 10%;margin-bottom: 5%;
+                                          background: rgb(230, 83, 60); padding: 10px;">Calculate </button></div> 
                 </div>
                 </div> 
                 </div>
